--- a/index.html
+++ b/index.html
@@ -317,20 +317,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-
-
-
-
-
-
-
-
 <div id="news" class="bio">
   <h1 class="md-heading text-left">
     <i class="fa fa-tasks" aria-hidden="true"></i>
     News
   </h1>  
   <ul>
+    <li class="indented" data-date="[Jun, 2025]"> Our paper <i>Video-MMLU: A Massive Multi-Discipline Lecture Understanding Benchmark</i> is accepted by ICCV 2025 Findings. </li>
     <li class="indented" data-date="[Jun, 2025]"> Our paper <i>Bringing RNNs Back to Efficient Open-Ended Video Understanding</i> is accepted by ICCV 2025. </li>
     <li class="indented" data-date="[Apr, 2025]"> We are hosting two CVPR 2025 Video Understanding Challenge @ <a href="https://sites.google.com/view/loveucvpr25/track1a">LOVE Track 1A</a> and <a href="https://sites.google.com/view/loveucvpr25/track1b">LOVE Track 1B</a>. </li>
     <li class="indented" data-date="[Apr, 2025]"> We release <a href="https://arxiv.org/pdf/2504.14693">Video-MMLU</a>, a Massive Multi-Discipline Lecture Understanding Benchmark. </li>
