--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     Selected Publications and Manuscripts
   </h1>
   <p>
-    * Equal contribution. † Project lead. ‡ Corresponding author.
+    * Equal contribution.
   </p>
   <p>
     Also see <a href="https://scholar.google.com/citations?user=sLqa-3oAAAAJ&hl=en" target="_blank">Google Scholar</a>.
@@ -375,7 +375,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="authors">
           <font style="font-size: 11pt;">
             <a class="author" href="https://espere-1119-song.github.io/"><b>Enxin Song</b></a>,
-            <a class="author" href="https://rese1f.github.io/">Wenhao Chai†</a>,
+            <a class="author" href="https://rese1f.github.io/">Wenhao Chai</a>,
             <a class="author" href="https://weili-0234.github.io/">Weili Xu</a>,
             <a class="author" href="http://www.stat.ucla.edu/~jxie/">Jianwen Xie</a>,
             <a class="author" href="">Yuxuan Liu</a>,
@@ -383,10 +383,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </font>
           </span>
         </div>
-        <!-- <div class="publish">
-          <span class="publisher">ICLR, 2025</span>
+        <div class="publish">
+          <span class="publisher">ICCVW, 2025</span>
           <span class="place"></span>
-        </div> -->
+        </div>
         <div class="tags">
           [<a class="tag" href="https://arxiv.org/abs/2504.14693"> <strong>Paper</strong></a>]
           [<a class="tag" href="https://enxinsong.com/Video-MMLU-web/"><strong>Website</strong></a>]
@@ -395,6 +395,38 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <img alt="NPM" src="https://img.shields.io/github/stars/Espere-1119-Song/Video-MMLU?style=social">
         </div>
         <span >Video-MMLU is a massive benchmark designed to evaluate the capabilities of LMMs in understanding Multi-Discipline Lectures. </span>
+      </div>
+    </div>
+
+	<div class="pub">
+      <div class="pub-left">
+        <img class="intro-img frame" src="publications/videommlu.png">
+      </div>
+      <div class="pub-right">
+        <div class="title">
+          AuroraLong: Bringing RNNs Back to Efficient Open-Ended Video Understanding
+        </div>
+        <div class="desc">
+        </div>
+        <div class="authors">
+          <font style="font-size: 11pt;">
+			<a class="author" href="https://weili-0234.github.io/">Weili Xu</a>,
+            <a class="author" href="https://espere-1119-song.github.io/"><b>Enxin Song</b></a>,
+            <a class="author" href="https://rese1f.github.io/">Wenhao Chai</a>,
+			<a class="author" href="">Xuexiang Wen</a>,
+			<a class="author" href="https://owen718.github.io/">Tian Ye</a>,
+            <a class="author" href="https://cvnext.github.io/">Gaoang Wang</a>,
+          </font>
+          </span>
+        </div>
+        <div class="publish">
+          <span class="publisher">ICCV, 2025</span>
+          <span class="place"></span>
+        </div>
+        <div class="tags">
+          [<a class="tag" href="https://arxiv.org/abs/2507.02591"> <strong>Paper</strong></a>]
+        </div>
+        <span >Video-MMLU uses a linear RNN language model that handles input sequence of arbitrary length with constant-size hidden states to solve long video understanding tasks. </span>
       </div>
     </div>
     
@@ -410,7 +442,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <div class="authors">
           <font style="font-size: 11pt;">
-            <a class="author" href="https://rese1f.github.io/">Wenhao Chai*†</a>,
+            <a class="author" href="https://rese1f.github.io/">Wenhao Chai*</a>,
             <a class="author" href="https://espere-1119-song.github.io/"><b>Enxin Song*</b></a>,
             <a class="author" href="https://yilundu.github.io/">Yilun Du</a>,
             <a class="author" href="https://cs.stanford.edu/~chenlin/">Chenlin Meng</a>,
@@ -427,7 +459,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <span class="place"></span>
         </div>
         <div class="tags">
-          [<a class="tag" href="https://arxiv.org/pdf/2410.06366"> <strong>Paper</strong></a>]
+          [<a class="tag" href="https://arxiv.org/abs/2410.03051"> <strong>Paper</strong></a>]
           [<a class="tag" href="https://rese1f.github.io/aurora-web/"><strong>Website</strong></a>]
           [<a class="tag" href="https://huggingface.co/collections/wchai/auroracap-66d117ffe13bedda96702013"><strong>Model</strong></a>]
           [<a class="tag" href="https://huggingface.co/datasets/wchai/Video-Detailed-Caption"><strong>Benchmark</strong></a>]
