--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<div class="pub">
       <div class="pub-left">
-        <img class="intro-img frame" src="publications/videommlu.png">
+        <img class="intro-img frame" src="publications/auroralong.png">
       </div>
       <div class="pub-right">
         <div class="title">
