--- a/index.html
+++ b/index.html
@@ -410,8 +410,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <div class="authors">
           <font style="font-size: 11pt;">
-			<a class="author" href="https://weili-0234.github.io/">Weili Xu</a>,
-            <a class="author" href="https://espere-1119-song.github.io/"><b>Enxin Song</b></a>,
+			<a class="author" href="https://weili-0234.github.io/">Weili Xu*</a>,
+            <a class="author" href="https://espere-1119-song.github.io/"><b>Enxin Song*</b></a>,
             <a class="author" href="https://rese1f.github.io/">Wenhao Chai</a>,
 			<a class="author" href="">Xuexiang Wen</a>,
 			<a class="author" href="https://owen718.github.io/">Tian Ye</a>,
