--- a/index.html
+++ b/index.html
@@ -323,14 +323,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     News
   </h1>  
   <ul>
-	<li class="indented" data-date="[Jun, 2025]"> Our paper <i>MovieChat+: Question-aware Sparse Memory for Long Video Question Answering</i> is accepted by IEEE TPAMI. </li>
-    <li class="indented" data-date="[Jun, 2025]"> Our paper <i>Video-MMLU: A Massive Multi-Discipline Lecture Understanding Benchmark</i> is accepted by ICCV 2025 Findings. </li>
+	<li class="indented" data-date="[Aug, 2025]"> Our paper <i>MovieChat+: Question-aware Sparse Memory for Long Video Question Answering</i> is accepted by IEEE TPAMI. </li>
+    <li class="indented" data-date="[Jul, 2025]"> Our paper <i>Video-MMLU: A Massive Multi-Discipline Lecture Understanding Benchmark</i> is accepted by ICCV 2025 Findings. </li>
     <li class="indented" data-date="[Jun, 2025]"> Our paper <i>Bringing RNNs Back to Efficient Open-Ended Video Understanding</i> is accepted by ICCV 2025. </li>
     <li class="indented" data-date="[Apr, 2025]"> We are hosting two CVPR 2025 Video Understanding Challenge @ <a href="https://sites.google.com/view/loveucvpr25/track1a">LOVE Track 1A</a> and <a href="https://sites.google.com/view/loveucvpr25/track1b">LOVE Track 1B</a>. </li>
     <li class="indented" data-date="[Apr, 2025]"> We release <a href="https://arxiv.org/pdf/2504.14693">Video-MMLU</a>, a Massive Multi-Discipline Lecture Understanding Benchmark. </li>
     <li class="indented" data-date="[Mar, 2025]"> One paper accepted to CVPR 2025 workshop@<a href="https://sites.google.com/view/elvm/home">Efficient Large Vision Models</a>. </li>
-    <li class="indented" data-date="[Jan, 2025]"> Our paper <i>AuroraCap: Efficient, Performant Video Detailed Captioning and a New Benchmark</i> is accepted by ICLR 2025. </li>
-    <li class="indented" data-date="[Jan, 2025]"> Our paper <i>Meissonic: Revitalizing masked generative transformers for efficient high-resolution text-to-image synthesis</i> is accepted by ICLR 2025. </li>
+    <li class="indented" data-date="[Jan, 2025]"> Two papers are accepted by ICLR 2025. </li>
+<!--     <li class="indented" data-date="[Jan, 2025]"> Our paper <i>Meissonic: Revitalizing masked generative transformers for efficient high-resolution text-to-image synthesis</i> is accepted by ICLR 2025. </li> -->
     <!-- <li class="indented" data-date="[Oct, 2024]"> We submit some baseline (AuroraCap, MovieChat, MovieChat-Onevision) and some benchmark (VDC, MovieChat-1K) to <a href="https://github.com/EvolvingLMMs-Lab/lmms-eval">lmms-eval</a> (LLaVA team), which enables quick evaluation with just a single line of code. </li> -->
     <!-- <li class="indented" data-date="[Oct, 2024]"> We release a new version of MovieChat, which use LLaVA-OneVision as the base model instead of the original VideoLLaMA. The new version is available on <a href="https://github.com/rese1f/MovieChat/tree/main/MovieChat_Onevision">Github</a>. </li> -->
     <!-- <li class="indented" data-date="[Oct, 2024]"> Our paper <i>Meissonic: Revitalizing Masked Generative Transformers for Efficient High-Resolution Text-to-Image Synthesis</i> is released, and the code is available at <a href="https://huggingface.co/MeissonFlow/Meissonic">website</a>. </li> 
