--- a/index.html
+++ b/index.html
@@ -323,6 +323,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     News
   </h1>  
   <ul>
+	<li class="indented" data-date="[Sep, 2025]"> Invited talk at <a href="https://lambda.ai/">Lambda AI</a> titled From Seeing to Thinking. </li>
+	<li class="indented" data-date="[Sep, 2025]"> One paper accepted by ICCV 2025 KnowledgeMR Workshop. </li>
 	<li class="indented" data-date="[Aug, 2025]"> Our paper <i>MovieChat+: Question-aware Sparse Memory for Long Video Question Answering</i> is accepted by IEEE TPAMI. </li>
     <li class="indented" data-date="[Jul, 2025]"> Our paper <i>Video-MMLU: A Massive Multi-Discipline Lecture Understanding Benchmark</i> is accepted by ICCV 2025 Findings. </li>
     <li class="indented" data-date="[Jun, 2025]"> Our paper <i>Bringing RNNs Back to Efficient Open-Ended Video Understanding</i> is accepted by ICCV 2025. </li>
