--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       Her work centers on video understanding, highlighted by MovieChat, the first Large Mutli-Modal Model for hour-long video understanding.
       She has co-organized workshops and challenges on video understanding at CVPR 2024 and 2025.
       She is a highly self-motivated, and curious student applying to <strong>Ph.D. programs for 2026Fall</strong>.
-      You can view her <a href="cv_enxinsong.pdf" target="_blank" rel="noopener">Curriculum Vitae</a> and <a href="20250501154022170.pdf" target="_blank" rel="noopener">undergraduate transcript</a>.
+      You can view her <a href="Enxin Song-CV.pdf" target="_blank" rel="noopener">Curriculum Vitae</a> and <a href="20250501154022170.pdf" target="_blank" rel="noopener">undergraduate transcript</a>.
       <br>
     </p>
   </div>
