--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <article class="timeline-entry">
         <div class="timeline-entry__meta">
           <span class="timeline-entry__time">Feb. 2025 – Present</span>
-          <img src="images/icon/UCSD.png" alt="UCSD" class="timeline-entry__logo">
+          <img src="images/icon/ucsd.png" alt="UCSD" class="timeline-entry__logo" width="48" height="48">
         </div>
         <div class="timeline-entry__content">
           <h3>University of California, San Diego (UCSD), USA</h3>
@@ -259,7 +259,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <article class="timeline-entry">
         <div class="timeline-entry__meta">
           <span class="timeline-entry__time">Nov. 2023 – May 2024</span>
-          <img src="images/icon/msra.jpg" alt="Microsoft Research Asia" class="timeline-entry__logo">
+          <img src="images/icon/msra.jpg" alt="Microsoft Research Asia" class="timeline-entry__logo" width="48" height="48">
         </div>
         <div class="timeline-entry__content">
           <h3>Media Computing Group, Microsoft Research Lab - Asia, Beijing</h3>
@@ -284,7 +284,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <article class="timeline-entry">
         <div class="timeline-entry__meta">
           <span class="timeline-entry__time">Sep. 2023 – Mar. 2026 (expected)</span>
-          <img src="images/icon/zju.png" alt="Zhejiang University" class="timeline-entry__logo">
+          <img src="images/icon/zju.png" alt="Zhejiang University" class="timeline-entry__logo" width="48" height="48">
         </div>
         <div class="timeline-entry__content">
           <h3>M.S., Zhejiang University, Hangzhou, China</h3>
@@ -296,7 +296,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <article class="timeline-entry">
         <div class="timeline-entry__meta">
           <span class="timeline-entry__time">Sep. 2019 – Jun. 2023</span>
-          <img src="images/icon/dlut.png" alt="Dalian University of Technology" class="timeline-entry__logo">
+          <img src="images/icon/dlut.png" alt="Dalian University of Technology" class="timeline-entry__logo" width="48" height="48">
         </div>
         <div class="timeline-entry__content">
           <h3>B.S., Dalian University of Technology (DLUT), Dalian, China</h3>
