--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   
 
   <link rel="shortcut icon" href="old_web/static/imgs/favicon.ico">
-  <link rel="stylesheet" href="main.css">
-  <link rel="stylesheet" href="css/custom.css">
+  <link rel="stylesheet" href="main.css?v=20240510">
+  <link rel="stylesheet" href="css/custom.css?v=20240510">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
