--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <article class="timeline-entry">
         <div class="timeline-entry__meta">
           <span class="timeline-entry__time">Feb. 2025 – Present</span>
-          <img src="images/icon/ucsd.png" alt="UCSD" class="timeline-entry__logo" width="48" height="48">
+          <img src="images/icon/UCSD.png" alt="UCSD" class="timeline-entry__logo" width="48" height="48">
         </div>
         <div class="timeline-entry__content">
           <h3>University of California, San Diego (UCSD), USA</h3>
@@ -392,7 +392,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="authors">
           <font style="font-size: 11pt;">
             <a class="author" href="https://espere-1119-song.github.io/"><b>Enxin Song*</b></a>,
-            <a class="author" href="https://rese1f.github.io/">Wenhao Chai*</a>,
+            <a class="author" href="https://rese1f.github.io/">Wenhao Chai</a>,
             <a class="author" href="https://scholar.google.com/citations?user=3CK77ZcAAAAJ&hl=en">Haiyang Xu</a>,
             <a class="author" href="http://www.stat.ucla.edu/~jxie/">Jianwen Xie</a>,
             <a class="author" href="https://pages.ucsd.edu/~ztu/">Zhuowen Tu</a>
