--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </h1>  
       <li>
         <strong>Conference and Journal Refereeing:</strong> <br>
-        &nbsp&nbsp&nbsp&nbsp NeurIPS 2025, PRCV 2025, CVPR 2025, ICLR 2025, TMM 2024, PRCV 2023<br>
+        &nbsp&nbsp&nbsp&nbsp NeurIPS 2025, PRCV 2023&2025, CVPR 2025, ICLR 2025&2026, TMM 2024, TPAMI 2025<br>
       </li>
       <li>
         <strong>Workshop Organization:</strong> <br>
@@ -646,6 +646,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </h1>
     <ul>
       <li><a href="https://lambda.ai/?matchtype=p&adgroup=167368709642&feeditemid=&loc_interest_ms=&loc_physical_ms=9053131&network=g&device=c&devicemodel=&adposition=&utm_source=google&utm_campaign=Google_Search_Cloud-Brand&utm_medium=search&utm_term=lambda%20ai&utm_content=708570750692&hsa_acc=1731978716&hsa_cam=17699749392&hsa_grp=167368709642&hsa_ad=708570750692&hsa_src=g&hsa_tgt=kwd-554422468680&hsa_kw=lambda%20ai&hsa_mt=p&hsa_net=adwords&hsa_ver=3&gad_source=1&gad_campaignid=17699749392&gbraid=0AAAAADrJiRzfUWNIrFKK1cSqVBfmCYcwO&gclid=Cj0KCQjwl5jHBhDHARIsAB0YqjwyVXl0iQvzsjkmAdZ7O4xSkSCjV5rVoJmwDkoGMi-z2I31lZAIPbwaAtIPEALw_wcB" target="_blank" rel="noopener">Lambda AI</a> Cloud Credits Grant Sponsorship, 2025</li>
+      <li> National Scholarship, 2025 (Zhejiang University)</li>
       <li> National Scholarship, 2024 (Zhejiang University)</li>
       <li> National Scholarship, 2021 (Dalian University of Technology)</li>
     </ul>
