--- a/index.html
+++ b/index.html
@@ -393,6 +393,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <font style="font-size: 11pt;">
             <a class="author" href="https://espere-1119-song.github.io/"><b>Enxin Song*</b></a>,
             <a class="author" href="https://rese1f.github.io/">Wenhao Chai</a>,
+            <a class="author" href="https://scholar.google.com/citations?user=v6dmW5cntoMC">Shusheng Yang</a>,
+            <a class="author" href="https://ethana.org/">Ethan J. Armand</a>,
+            <a class="author" href="https://shanxiaojun.github.io/">Xiaojun Shan</a>,
             <a class="author" href="https://scholar.google.com/citations?user=3CK77ZcAAAAJ&hl=en">Haiyang Xu</a>,
             <a class="author" href="http://www.stat.ucla.edu/~jxie/">Jianwen Xie</a>,
             <a class="author" href="https://pages.ucsd.edu/~ztu/">Zhuowen Tu</a>
