--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <article class="timeline-entry">
         <div class="timeline-entry__meta">
           <span class="timeline-entry__time">Feb. 2025 – Present</span>
-          <img src="images/icon/UCSD.png" alt="UCSD" class="timeline-entry__logo" width="48" height="48">
+          <img src="images/icon/UCSD.svg" alt="UCSD" class="timeline-entry__logo" width="50" height="50">
         </div>
         <div class="timeline-entry__content">
           <h3>University of California, San Diego (UCSD), USA</h3>
