--- a/index.html
+++ b/index.html
@@ -321,6 +321,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <ul class="news-list">
     <li class="news-list__item">
       <span class="news-list__date">Oct 2025</span>
+      <span class="news-list__text">Video-MMLU received the <a href="https://knowledgemr-workshop.github.io/#accepted-paper">Outstanding Paper Award</a> at the ICCV 2025 Knowledge-Intensive Multimodal Reasoning Workshop, along with a travel grant.</span>
+    </li>
+    <li class="news-list__item">
+      <span class="news-list__date">Oct 2025</span>
       <span class="news-list__text">We release <a href="https://enxinsong.com/VideoNSA-web/">VideoNSA</a>, a hardware-aware native sparse attention mechanism for video understanding.</span>
     </li>
     <li class="news-list__item">
