--- a/index.html
+++ b/index.html
@@ -320,6 +320,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </h1>  
   <ul class="news-list">
     <li class="news-list__item">
+      <span class="news-list__date">Nov 2025</span>
+      <span class="news-list__text">Selected (top 10%) to give a talk at the KAUST Rising Stars in AI Symposium 2026.</span>
+    </li>
+    <li class="news-list__item">
       <span class="news-list__date">Oct 2025</span>
       <span class="news-list__text">Video-MMLU received the <a href="https://knowledgemr-workshop.github.io/#accepted-paper">Outstanding Paper Award</a> at the ICCV 2025 Knowledge-Intensive Multimodal Reasoning Workshop, along with a travel grant.</span>
     </li>
@@ -339,10 +343,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <span class="news-list__date">Aug 2025</span>
       <span class="news-list__text">Our paper <i>MovieChat+: Question-aware Sparse Memory for Long Video Question Answering</i> is accepted by IEEE TPAMI.</span>
     </li>
-    <li class="news-list__item">
+    <!-- <li class="news-list__item">
       <span class="news-list__date">Jul 2025</span>
       <span class="news-list__text">Our paper <i>Video-MMLU: A Massive Multi-Discipline Lecture Understanding Benchmark</i> is accepted by ICCV 2025 Findings.</span>
-    </li>
+    </li> -->
   </ul>
   <!-- Additional historical updates retained below for reference
     <li class="indented" data-date="[Jun, 2025]"> Our paper <i>Bringing RNNs Back to Efficient Open-Ended Video Understanding</i> is accepted by ICCV 2025. </li>
@@ -623,8 +627,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </li>
       <li>
         <strong>Workshop Organization:</strong> <br>
-        &nbsp&nbsp&nbsp&nbsp Workshop on Long-form Video Understanding at CVPR 2025<br>
-        &nbsp&nbsp&nbsp&nbsp Workshop on Long-form Video Understanding at CVPR 2024<br>
+        &nbsp&nbsp&nbsp&nbsp Multimodal Video Agent Workshop on CVPR 2025<br>
+        &nbsp&nbsp&nbsp&nbsp Long-form Video Understanding Towards Multimodal AI Assistant and Copilot Workshop on CVPR 2024<br>
       </li>
     </div>
   </div>
@@ -652,6 +656,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       Selected Honors & Awards
     </h1>
     <ul>
+      <li>  KAUST Rising Stars in AI Symposium 2026</li>
       <li><a href="https://lambda.ai/?matchtype=p&adgroup=167368709642&feeditemid=&loc_interest_ms=&loc_physical_ms=9053131&network=g&device=c&devicemodel=&adposition=&utm_source=google&utm_campaign=Google_Search_Cloud-Brand&utm_medium=search&utm_term=lambda%20ai&utm_content=708570750692&hsa_acc=1731978716&hsa_cam=17699749392&hsa_grp=167368709642&hsa_ad=708570750692&hsa_src=g&hsa_tgt=kwd-554422468680&hsa_kw=lambda%20ai&hsa_mt=p&hsa_net=adwords&hsa_ver=3&gad_source=1&gad_campaignid=17699749392&gbraid=0AAAAADrJiRzfUWNIrFKK1cSqVBfmCYcwO&gclid=Cj0KCQjwl5jHBhDHARIsAB0YqjwyVXl0iQvzsjkmAdZ7O4xSkSCjV5rVoJmwDkoGMi-z2I31lZAIPbwaAtIPEALw_wcB" target="_blank" rel="noopener">Lambda AI</a> Cloud Credits Grant Sponsorship, 2025</li>
       <li> National Scholarship, 2025 (Zhejiang University)</li>
       <li> National Scholarship, 2024 (Zhejiang University)</li>
