--- a/index.html
+++ b/index.html
@@ -221,15 +221,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     About
   </h1>
   <div class="bio-body" style="overflow:hidden;">
-    <p> 
-      Enxin Song is a research intern at the University of California, San Diego (<a href="https://www.ucsd.edu/">UCSD</a>) under Prof. <a href="https://pages.ucsd.edu/~ztu/">Zhuowen Tu</a>. 
-      She will receive her M.S. in March 2026 from <a href="https://zjui.intl.zju.edu.cn//">Zhejiang University</a>, advised by Prof. <a href="https://scholar.google.com/citations?user=GhsXNiwAAAAJ&hl=zh-CN">Gaoang Wang</a> (<a href="https://cvnext.github.io/">CVNext Lab</a>), and holds a B.S. in Software Engineering from <a href="https://en.dlut.edu.cn/">Dalian University of Technology</a>. 
-      Previously, she was a research intern at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/"> Microsoft Research Asia</a>.
-      Enxin stays curious about the wider landscape of computer vision and deep learning, and actively seeks new collaboration opportunities.
-      Her work centers on video understanding, highlighted by MovieChat, the first Large Mutli-Modal Model for hour-long video understanding.
-      She has co-organized workshops and challenges on video understanding at CVPR 2024 and 2025.
-      She is a highly self-motivated, and curious student applying to <strong>Ph.D. programs for 2026Fall</strong>.
-      You can view her <a href="Enxin Song-CV.pdf" target="_blank" rel="noopener">Curriculum Vitae</a> and <a href="20250501154022170.pdf" target="_blank" rel="noopener">undergraduate transcript</a>.
+    <p>
+      Enxin Song is currently a master student at <a href="https://zjui.intl.zju.edu.cn//">Zhejiang University</a>. She is a research intern at <a href="https://www.nyu.edu/">New York University</a>, working with Prof. <a href="https://www.sainingxie.com/">Saining Xie</a>, and previously conducted research as a visiting intern at the University of California, San Diego (<a href="https://www.ucsd.edu/">UCSD</a>) under the supervision of Prof. <a href="https://pages.ucsd.edu/~ztu/">Zhuowen Tu</a>. She will receive her M.S. degree in March 2026 from Zhejiang University, where she is advised by Prof. <a href="https://scholar.google.com/citations?user=GhsXNiwAAAAJ&hl=zh-CN">Gaoang Wang</a> (<a href="https://cvnext.github.io/">CVNext Lab</a>), and holds a B.S. in Software Engineering from <a href="https://en.dlut.edu.cn/">Dalian University of Technology</a>. Her work centers on video understanding, highlighted by MovieChat, the first Large Mutli-Modal Model for hour-long video understanding. She has co-organized workshops and challenges on video understanding at CVPR 2024 and 2025.
+    </p>
+    <p class="bio-highlight">
+      <strong>She is a highly self-motivated student applying to Ph.D. programs for 2026Fall.</strong>
+      You can view her <a href="cv_enxinsong.pdf" target="_blank" rel="noopener">Curriculum Vitae</a> and <a href="20250501154022170.pdf" target="_blank" rel="noopener">undergraduate transcript</a>.
       <br>
     </p>
   </div>
@@ -425,6 +422,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
     </div>
 
+    <!--
     <div class="pub">
       <div class="pub-left">
         <img class="intro-img frame" src="publications/videommlu.png">
@@ -460,6 +458,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <span >Video-MMLU is a massive benchmark designed to evaluate the capabilities of LMMs in understanding Multi-Discipline Lectures. </span>
       </div>
     </div>
+    -->
 
 	<div class="pub">
       <div class="pub-left">
