--- a/index.html
+++ b/index.html
@@ -620,15 +620,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <i class="fa fa-tasks" aria-hidden="true"></i>
         Professional Service
       </h1>  
-      <li>
-        <strong>Conference and Journal Refereeing:</strong> <br>
-        &nbsp&nbsp&nbsp&nbsp NeurIPS 2025, PRCV 2023&2025, CVPR 2025, ICLR 2025&2026, TMM 2024, TPAMI 2025<br>
-      </li>
-      <li>
-        <strong>Workshop Organization:</strong> <br>
-        &nbsp&nbsp&nbsp&nbsp Multimodal Video Agent Workshop on CVPR 2025<br>
-        &nbsp&nbsp&nbsp&nbsp Long-form Video Understanding Towards Multimodal AI Assistant and Copilot Workshop on CVPR 2024<br>
-      </li>
+      <div class="info-card-grid">
+        <div class="info-card">
+          <p class="info-card__eyebrow">Conference &amp; Journal Refereeing</p>
+          <p class="info-card__text">NeurIPS 2025, PRCV 2023 &amp; 2025, CVPR 2025, ICLR 2025 &amp; 2026, TMM 2024, TPAMI 2025.</p>
+        </div>
+        <div class="info-card">
+          <p class="info-card__eyebrow">Workshop Organization</p>
+          <ul class="info-card__list">
+            <li><a href="https://sites.google.com/view/loveucvpr25" target="_blank" rel="noopener">Multimodal Video Agent Workshop @ CVPR 2025</a></li>
+            <li><a href="https://sites.google.com/view/loveucvpr24/home" target="_blank" rel="noopener">Long-form Video Understanding Towards Multimodal AI Assistant and Copilot @ CVPR 2024</a></li>
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
 </div>
@@ -641,10 +645,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <i class="fa fa-tasks" aria-hidden="true"></i>
         Teaching Assistant
       </h1>  
-      <li>
-        <strong>ECE 445 Senior Design (Undergraduate) - Sping 2024</strong><br>
-        &nbsp&nbsp&nbsp&nbsp Teaching Assistant (TA), with <a href="https://person.zju.edu.cn/en/gaoangwang/">Prof. Gaoang Wang</a>
-      </li>
+      <div class="teaching-card">
+        <div class="teaching-card__term">Spring 2024</div>
+        <div class="teaching-card__course">ECE 445 Senior Design (Undergraduate)</div>
+        <p class="teaching-card__meta">Teaching Assistant with <a href="https://person.zju.edu.cn/en/gaoangwang/">Prof. Gaoang Wang</a>.</p>
+      </div>
   </div>
 </div>
 
@@ -654,12 +659,27 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <i class="fa fa-tasks" aria-hidden="true"></i>
       Selected Honors & Awards
     </h1>
-    <ul>
-      <li>  KAUST Rising Stars in AI Symposium 2026</li>
-      <li><a href="https://lambda.ai/?matchtype=p&adgroup=167368709642&feeditemid=&loc_interest_ms=&loc_physical_ms=9053131&network=g&device=c&devicemodel=&adposition=&utm_source=google&utm_campaign=Google_Search_Cloud-Brand&utm_medium=search&utm_term=lambda%20ai&utm_content=708570750692&hsa_acc=1731978716&hsa_cam=17699749392&hsa_grp=167368709642&hsa_ad=708570750692&hsa_src=g&hsa_tgt=kwd-554422468680&hsa_kw=lambda%20ai&hsa_mt=p&hsa_net=adwords&hsa_ver=3&gad_source=1&gad_campaignid=17699749392&gbraid=0AAAAADrJiRzfUWNIrFKK1cSqVBfmCYcwO&gclid=Cj0KCQjwl5jHBhDHARIsAB0YqjwyVXl0iQvzsjkmAdZ7O4xSkSCjV5rVoJmwDkoGMi-z2I31lZAIPbwaAtIPEALw_wcB" target="_blank" rel="noopener">Lambda AI</a> Cloud Credits Grant Sponsorship, 2025</li>
-      <li> National Scholarship, 2025 (Zhejiang University)</li>
-      <li> National Scholarship, 2024 (Zhejiang University)</li>
-      <li> National Scholarship, 2021 (Dalian University of Technology)</li>
+    <ul class="awards-list">
+      <li>
+        <span class="awards-list__year">2026</span>
+        <div class="awards-list__text"><a href="https://www.kaust.edu.sa/events/rsais26/" target="_blank" rel="noopener">KAUST Rising Stars in AI Symposium</a></div>
+      </li>
+      <li>
+        <span class="awards-list__year">2025</span>
+        <div class="awards-list__text"><a href="https://lambda.ai/?matchtype=p&adgroup=167368709642&feeditemid=&loc_interest_ms=&loc_physical_ms=9053131&network=g&device=c&devicemodel=&adposition=&utm_source=google&utm_campaign=Google_Search_Cloud-Brand&utm_medium=search&utm_term=lambda%20ai&utm_content=708570750692&hsa_acc=1731978716&hsa_cam=17699749392&hsa_grp=167368709642&hsa_ad=708570750692&hsa_src=g&hsa_tgt=kwd-554422468680&hsa_kw=lambda%20ai&hsa_mt=p&hsa_net=adwords&hsa_ver=3&gad_source=1&gad_campaignid=17699749392&gbraid=0AAAAADrJiRzfUWNIrFKK1cSqVBfmCYcwO&gclid=Cj0KCQjwl5jHBhDHARIsAB0YqjwyVXl0iQvzsjkmAdZ7O4xSkSCjV5rVoJmwDkoGMi-z2I31lZAIPbwaAtIPEALw_wcB" target="_blank" rel="noopener">Lambda AI</a> Cloud Credits Grant Sponsorship</div>
+      </li>
+      <li>
+        <span class="awards-list__year">2025</span>
+        <div class="awards-list__text">National Scholarship, Zhejiang University</div>
+      </li>
+      <li>
+        <span class="awards-list__year">2024</span>
+        <div class="awards-list__text">National Scholarship, Zhejiang University</div>
+      </li>
+      <li>
+        <span class="awards-list__year">2021</span>
+        <div class="awards-list__text">National Scholarship, Dalian University of Technology</div>
+      </li>
     </ul>
   </div>
 </div>
