--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </p>
     <p class="bio-highlight">
       <strong>She is a highly self-motivated student applying to Ph.D. programs for 2026Fall.</strong>
-      You can view her <a href="cv_enxinsong.pdf" target="_blank" rel="noopener">Curriculum Vitae</a> and <a href="20250501154022170.pdf" target="_blank" rel="noopener">undergraduate transcript</a>.
+      You can view her <a href="cv_enxinsong.pdf" target="_blank" rel="noopener">Curriculum Vitae</a>.
       <br>
     </p>
   </div>
