--- a/index.html
+++ b/index.html
@@ -317,6 +317,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </h1>  
   <ul class="news-list">
     <li class="news-list__item">
+      <span class="news-list__date">Jan 2026</span>
+      <span class="news-list__text">Our <a href="https://enxinsong.com/VideoNSA-web/">VideoNSA</a> is accepted by ICLR 2026.</span>
+    </li>
+    <li class="news-list__item">
       <span class="news-list__date">Nov 2025</span>
       <span class="news-list__text">Selected (top 10%) to give a talk at the KAUST Rising Stars in AI Symposium 2026.</span>
     </li>
@@ -408,7 +412,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </span>
         </div>
         <div class="publish">
-          <span class="publisher">Preprint, 2025</span>
+          <span class="publisher">ICLR, 2026</span>
           <span class="place"></span>
         </div>
         <div class="tags">
@@ -623,7 +627,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="info-card-grid">
         <div class="info-card">
           <p class="info-card__eyebrow">Conference &amp; Journal Refereeing</p>
-          <p class="info-card__text">NeurIPS 2025, PRCV 2023 &amp; 2025, CVPR 2025, ICLR 2025 &amp; 2026, TMM 2024, TPAMI 2025.</p>
+          <p class="info-card__text">NeurIPS 2025, PRCV 2023 &amp; 2025, CVPR 2025 &amp; 2026, ICLR 2025 &amp; 2026, TMM 2024, TPAMI 2025.</p>
         </div>
         <div class="info-card">
           <p class="info-card__eyebrow">Workshop Organization</p>
